<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.sap.Prism.Webui.Automation</groupId>
	<artifactId>Prism.Webui.Automation</artifactId>
	<version>1.1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
	 	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>	
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.21.0</version>
				<configuration>
					<suiteXmlFiles>
						<suiteXmlFile>${testng.File}</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>net.sf.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.11.0</version>
		</dependency>
		<dependency>
			<groupId>ldapjdk</groupId>
			<artifactId>ldapjdk</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${basedir}/lib/sun.misc.BASE64Decoder.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>ldapjdk1</groupId>
			<artifactId>ldapjdk1</artifactId>
			<scope>system</scope>
			<version>1.6</version>
			<systemPath>${basedir}/lib/deploy-1.6.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>ldapjdk1</groupId>
			<artifactId>ldapjdk1</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${basedir}/lib/com4j.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>SUPA</groupId>
			<artifactId>SUPAPerformance</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${basedir}/lib/performanceCommons.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>SUPA</groupId>
			<artifactId>SupaCollections</artifactId>
			<scope>system</scope>
			<version>3.2</version>
			<systemPath>${basedir}/lib/commons-collections-3.2.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>SUPA</groupId>
			<artifactId>SupaConfiguration</artifactId>
			<scope>system</scope>
			<version>1.4</version>
			<systemPath>${basedir}/lib/commons-configuration-1.4.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>SUPA</groupId>
			<artifactId>ldapjdk</artifactId>
			<scope>system</scope>
			<version>2.6</version>
			<systemPath>${basedir}/lib/commons-lang-2.6.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>SUPA</groupId>
			<artifactId>SupaClient</artifactId>
			<scope>system</scope>
			<version>1.0</version>
			<systemPath>${basedir}/lib/supaClient.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20160212</version>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.9.9</version>
		</dependency>
		<dependency>
			<groupId>jvmx_tools</groupId>
			<artifactId>jvmx_tools</artifactId>
			<version>0</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/jvmx_tools.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>jvmx_tools_impl</groupId>
			<artifactId>jvmx_tools_impl</artifactId>
			<version>0</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/jvmx_tools_impl.jar</systemPath>
		</dependency>
		<dependency>
			<groupId>debugging</groupId>
			<artifactId>debugging_2.2_backend</artifactId>
			<version>2.2</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/debugging_2.2_backend.jar</systemPath>
		</dependency>
	</dependencies>
</project>